改了一个字

--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ minify = true
     showToc = true
     enableRelated = true
     # 站点描述，适用于 SEO
-    description = "欢迎光临啃魂的个人博客，他的完本作品有：《龙珠之超级宗师》、《天龙天外天》（又名《书虫成神记》）、《猪妖传》、《悟道天龙》、《幸福武侠》。他已经研究写作很长时间了，相信很快会有新作品出来。"
+    description = "欢迎光临啃魂的个人博客，他的完本作品有：《龙珠之超级宗师》、《天龙天外天》（又名《书虫成神记》）、《猪妖传》、《悟道天龙》、《幸福武侠》。他已经研究写作很长时间了，相信很快就会有新作品出来。"
     keywords = ["啃魂", "龙珠之超级宗师", "天龙天外天", "书虫成神记", "猪妖传", "悟道天龙", "幸福武侠"]
     # Google Analytics
     googleAnalytics = "G-QDKFP4QCT8"  # 你的 GA4 ID
